gitops/apps/codimd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: codimd
  labels:
    name: codimd
